--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "main": "./lib/recaptcha.js",
   "devDependencies": {
     "chai": "^3.5.0",
-    "https": "*",
     "mocha": "^3.1.2",
-    "querystring": "*"
+    "underscore": "^1.8.3"
   },
   "engines": {
     "node": ">= 0.6.0"
@@ -40,7 +39,6 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "request": "^2.78.0",
-    "underscore": "^1.8.3"
+    "request": "^2.78.0"
   }
 }
